--- a/src/styles/ItemContainer.module.css
+++ b/src/styles/ItemContainer.module.css
@@ -8,9 +8,7 @@
 /* Mobile */
 @media (max-width: 700px) {
   .grid {
-    /* TODO Look up how to make a single column list*/
     grid-template-columns: repeat(1, minmax(100%, auto));
-    margin-bottom: 120px;
     max-width: 320px;
     text-align: center;
   }
@@ -19,7 +17,6 @@
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
-    /* TODO Look up how to make a 2 column list*/
     grid-template-columns: repeat(2, minmax(50%, auto));
   }
 }
